manifests/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: prometheus-dashboard
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.custom-serverless.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-server
                port:
                  number: 9090
            path: /
            pathType: Prefix
